--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-token=MTAzOTY0NzM1MjM2Mjg5MzMzMg.GC5ZuA.Tstv5Y8P5VbcrlBzYtv6VJm-YM_K2UPYcQ8YM8
+token=MTAzOTY0NzM1MjM2Mjg5MzMzMg.G5pOts.egmNr7lQgWixCrLb-TeCdoH7HWzDo8mXGsH7ts
