--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-token=MTAzOTY0NzM1MjM2Mjg5MzMzMg.G5pOts.egmNr7lQgWixCrLb-TeCdoH7HWzDo8mXGsH7ts
+token=MTAzOTY0NzM1MjM2Mjg5MzMzMg.GhxM5b.7deJb9DK0E3OdH6WcfJu3rx5N8LGBD8-qtqdBA
