--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-token=MTAzOTY0NzM1MjM2Mjg5MzMzMg.GhxM5b.7deJb9DK0E3OdH6WcfJu3rx5N8LGBD8-qtqdBA
+token=MTAzOTY0NzM1MjM2Mjg5MzMzMg.GQ-GZi.2dzJR8PDU8F_HBzfFrh-2WTvWKt3KZKHe6mS4s
