--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-token=MTAzOTY0NzM1MjM2Mjg5MzMzMg.GQ-GZi.2dzJR8PDU8F_HBzfFrh-2WTvWKt3KZKHe6mS4s
+token=MTAzOTY0NzM1MjM2Mjg5MzMzMg.GpO4e_.8-d1AHegj6wOuqv85-0kWFoC1Lsm0O6zFCkJ_o
