--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-token=MTAzOTY0NzM1MjM2Mjg5MzMzMg.GpO4e_.8-d1AHegj6wOuqv85-0kWFoC1Lsm0O6zFCkJ_o
+token=MTAzOTY0NzM1MjM2Mjg5MzMzMg.G5q2pE.chWkPYLCaFVcU1-vFXZY9hR2uVqCP_V7RBw_HY
